force-app/main/default/objects/Activity/fields/Acci_n__c.field-meta.xml
<CustomField>
    <fullName>Acci_n__c</fullName>
    <label>Acción</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Baja</fullName>
            </value>
            <value>
                <fullName>Cambio titular no gestionado por deuda</fullName>
            </value>
            <value>
                <fullName>Cuota de GPO</fullName>
            </value>
            <value>
                <fullName>En Negociacion</fullName>
            </value>
            <value>
                <fullName>Mantener</fullName>
            </value>
            <value>
                <fullName>Negociar precio</fullName>
            </value>
            <value>
                <fullName>No interesa</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Pedido + Cuota</fullName>
            </value>
            <value>
                <fullName>Pedido a la competencia</fullName>
            </value>
            <value>
                <fullName>Pendiente respuesta cliente</fullName>
            </value>
            <value>
                <fullName>Precio alto</fullName>
            </value>
            <value>
                <fullName>Registro pedido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>