force-app/main/default/objects/Activity/fields/Departamento__c.field-meta.xml
<CustomField>
    <fullName>Departamento__c</fullName>
    <label>Departamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Credit &amp; Collection</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>Elige una opción</fullName>
                <isActive>false</isActive>
                <label>Elige una opción</label>
            </value>
            <value>
                <fullName>Equipo Comercial</fullName>
            </value>
            <value>
                <fullName>Facturacion</fullName>
            </value>
            <value>
                <fullName>Gestion Comercial</fullName>
                <isActive>false</isActive>
                <label>Gestion Comercial</label>
            </value>
            <value>
                <fullName>Internal Sales</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Logistica</fullName>
            </value>
            <value>
                <fullName>Operaciones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>