force-app/main/default/objects/Activity/fields/fecha_fin_tarea__c.field-meta.xml
<CustomField>
    <fullName>fecha_fin_tarea__c</fullName>
    <label>Fecha fin tarea</label>
    <type>Date</type>
</CustomField>