force-app/main/default/objects/Activity/fields/Id_Navision__c.field-meta.xml
<CustomField>
    <fullName>Id_Navision__c</fullName>
    <inlineHelpText>Deberá indicarse el Código de la dirección de entrega que es el campo Id Navision para crear una tarea de pedido de gas al indicar el nivel del deposito</inlineHelpText>
    <label>Id Navision</label>
    <type>TextArea</type>
</CustomField>