force-app/main/default/objects/Activity/fields/Lectura__c.field-meta.xml
<CustomField>
    <fullName>Lectura__c</fullName>
    <description>Lectura del contador sin decimales.</description>
    <inlineHelpText>Lectura del contador sin decimales.</inlineHelpText>
    <label>Lectura</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>