force-app/main/default/objects/Activity/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <description>Motivo según asunto</description>
    <inlineHelpText>Motivo según asunto</inlineHelpText>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cerrado por baja productividad</fullName>
            </value>
            <value>
                <fullName>Cliente indica que no lo ha solicitado</fullName>
            </value>
            <value>
                <fullName>Condiciones forma de pago</fullName>
            </value>
            <value>
                <fullName>Dificultad-Incidencias acceso</fullName>
            </value>
            <value>
                <fullName>Precio</fullName>
            </value>
            <value>
                <fullName>GPO</fullName>
            </value>
            <value>
                <fullName>Servicio prestado</fullName>
            </value>
            <value>
                <fullName>Finalización de contrato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>