force-app/main/default/objects/Activity/fields/Nivel_deposito__c.field-meta.xml
<CustomField>
    <fullName>Nivel_deposito__c</fullName>
    <inlineHelpText>Nivel del depósito en %, valores permitidos entre 0 y 85.</inlineHelpText>
    <label>Nivel depósito</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>