force-app/main/default/objects/Activity/fields/Related_account__c.field-meta.xml
<CustomField>
    <fullName>Related_account__c</fullName>
    <formula>WhatId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related account</label>
    <type>Text</type>
</CustomField>