force-app/main/default/objects/Activity/fields/Resultado_tarea__c.field-meta.xml
<CustomField>
    <fullName>Resultado_tarea__c</fullName>
    <inlineHelpText>Una vez finalizada la tarea pondremos los comentarios aquí</inlineHelpText>
    <label>Resultado tarea</label>
    <type>TextArea</type>
</CustomField>