force-app/main/default/objects/Activity/fields/Segmentaci_n__c.field-meta.xml
<CustomField>
    <fullName>Segmentaci_n__c</fullName>
    <defaultValue>&quot;Ninguno&quot;</defaultValue>
    <label>Segmentación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 estrella (E)</fullName>
            </value>
            <value>
                <fullName>2 estrellas (D)</fullName>
            </value>
            <value>
                <fullName>3 estrellas (C)</fullName>
            </value>
            <value>
                <fullName>4 estrellas (B)</fullName>
            </value>
            <value>
                <fullName>5 estrellas (A)</fullName>
            </value>
            <value>
                <fullName>Elige una opción</fullName>
                <isActive>false</isActive>
                <label>Elige una opción</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>