force-app/main/default/objects/Activity/listViews/MyTeamsActivities.listView-meta.xml
<ListView>
    <fullName>MyTeamsActivities</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.STATUS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.CREATED_DATE</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>fecha_fin_tarea__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2014 12:00 AM</value>
    </filters>
    <label>Actividades de mi equipo</label>
    <language>es</language>
</ListView>